--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+screenshot*
+.screenshot*
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
